syntax = "proto3";

package user.v1;

option go_package = "github.com/dietzy1/chatapp/services/user/proto/user/v1;userv1";

service UserService {
	//internal RPC
rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
rpc AddChatServer(AddChatServerRequest) returns (AddChatServerResponse) {}
rpc RemoveChatServer(RemoveChatServerRequest) returns (RemoveChatServerResponse) {}
//rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}

//External RPC
rpc EditDescription (EditDescriptionRequest) returns (EditDescriptionResponse) {}
rpc ChangeAvatar (ChangeAvatarRequest) returns (ChangeAvatarResponse) {}
}

message CreateUserRequest {
string user_uuid = 1;
string username = 2;
}

message CreateUserResponse {
}

message AddChatServerRequest {
	string user_uuid = 1;
	string chatserver_uuid = 2;
}

message AddChatServerResponse {
}

message RemoveChatServerRequest{
	string user_uuid = 1;
	string chatserver_uuid = 2;
}

message RemoveChatServerResponse {
}

message EditDescriptionRequest {
	string user_uuid = 1;
	string description = 2;
}

message EditDescriptionResponse {
}

message ChangeAvatarRequest {

}

message ChangeAvatarResponse {

}








/* type User struct {
	Icon        Icon //A link to the users icon
	Name        string
	Uuid        string
	Discription string
	JoinDate    string
	Roles       []string
	ChatServers []string
	Reports     int
}
 */










